--- a/src/app/pages/layout/views/layout.component.html
+++ b/src/app/pages/layout/views/layout.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container"
+     fxLayout="column">
     <div class="header mat-elevation-z4"
          ngClass="header-container"
          ngClass.lt-md="header-container-lt-md"
@@ -8,13 +9,13 @@
     <div>
         <router-outlet></router-outlet>
     </div>
-    <div class="w-100 h-50p back text-center pointer"
-         fxLayout="row"
-         fxLayoutAlign="center center"
-         (click)="scroll()">
-        <span class="pointer">Back to top</span>
-    </div>
     <div class="w-100">
+        <div class="w-100 h-50p back text-center pointer"
+             fxLayout="row"
+             fxLayoutAlign="center center"
+             (click)="scroll()">
+            <span class="pointer">Back to top</span>
+        </div>
         <app-footer></app-footer>
     </div>
 </div>
