--- a/src/app/pages/layout/views/layout.component.scss
+++ b/src/app/pages/layout/views/layout.component.scss
@@ -3,6 +3,7 @@
 :host ::ng-deep {
     .container {
         width: 100% !important;
+        min-height: 100vh !important;
         background-color: #161518 !important;
     }
 
