--- a/src/app/pages/my-list/views/my-list.component.scss
+++ b/src/app/pages/my-list/views/my-list.component.scss
@@ -25,6 +25,13 @@
         margin-bottom: 26px !important;
     }
 
+    .mat-icon {
+        width: 180px !important;
+        height: 180px !important;
+        font-size: 180px !important;
+        color: rgba(1, 179, 228, 0.377) !important;
+    }
+
     .mat-progress-spinner circle, .mat-spinner circle {
         stroke: $main-color !important;
     }
