--- a/src/app/pages/search/views/search/search.component.scss
+++ b/src/app/pages/search/views/search/search.component.scss
@@ -30,4 +30,11 @@
     .mat-progress-spinner circle, .mat-spinner circle {
         stroke: $main-color !important;
     }
+
+    .mat-icon {
+        width: 180px !important;
+        height: 180px !important;
+        font-size: 180px !important;
+        color: rgba(1, 179, 228, 0.377) !important;
+    }
 }
