:bug: bugs feat(Bugs) Fix bugs

--- a/src/app/pages/layout/components/header/header.component.html
+++ b/src/app/pages/layout/components/header/header.component.html
@@ -76,8 +76,8 @@
                     fxLayoutGap="2px">
                     <li class="search-item"
                         fxLayout="row" 
-                        fxLayoutAlig="center cente"
-                        fxLayoutGap="4px"
+                        fxLayoutAlig="center center"
+                        fxLayoutGap="12px"
                         *ngFor="let movie of movies"
                         (click)="goToMovieOrSerie(movie)">
                         <div class="image-search">
