--- a/src/app/pages/my-list/views/my-list.component.html
+++ b/src/app/pages/my-list/views/my-list.component.html
@@ -4,12 +4,19 @@
      fxLayoutGap="41px">
      <h2 class="w-100 text-center">My list</h2>
      <div *ngIf="!spinner && !notMovies && movies.length > 0"
-          class="w-82"
-          fxLayout="row wrap">
+          ngClass="movies-list"
+          ngClass.md="movies-list-md"
+          ngClass.sm="movies-list-sm"
+          ngClass.xs="movies-list-xs"
+          fxLayout="row wrap"
+          fxLayoutAlig="start center">
           <div *ngFor="let movie of movies"
                fxLayout="row"
                fxLayoutAlign="start start"
-               class="movie-card mb-26">
+               ngClass="movie-card"
+               ngClass.md="movie-card-md"
+               ngClass.sm="movie-card-sm"
+               ngClass.xs="movie-card-xs">
                <div class="w-100 h-100">
                     <app-movie-card [movie]="movie"
                                     (click)="goToMovie(movie)" ></app-movie-card>
@@ -19,14 +26,14 @@
      <div *ngIf="!spinner && notMovies"
           fxLayout="column"
           fxLayoutAlign="start center"
-          fxLayoutGap="15px"
-          class="w-100 h-300p">
+          fxLayoutGap="10px"
+          class="w-100 mb-10">
           <mat-icon>bookmark-outlined</mat-icon>
           <span class="text-15">There are no saved items</span>
      </div>
      <div class="spinner"
            fxLayout="row"
-         fxLayoutAlign="center center"
+           fxLayoutAlign="center center"
           *ngIf="spinner && !notMovies">
           <mat-spinner [diameter]="90"
                          [strokeWidth]="6">
