--- a/src/app/pages/search/views/search/search.component.scss
+++ b/src/app/pages/search/views/search/search.component.scss
@@ -4,7 +4,6 @@
     h3 {
         margin: 0px !important;
         font-size: 25px !important;
-        color: $secondary-color !important;
     }
 
     .h-85p {
@@ -20,10 +19,54 @@
         padding: 0px 30px !important;
     }
 
+    .movies-search-md {
+        width: 900px !important;
+        padding: 0px 30px !important;
+    }
+
+    .movies-search-sm {
+        width: 580px !important;
+        padding: 0px 30px !important;
+
+        @media only screen and (min-width: 800px) and (max-width: 959px){
+            width: 740px !important;
+        }
+    }
+
+    .movies-search-xs {
+        width: 320px !important;
+        padding: 0px 18px !important;
+
+        @media only screen and (min-width: 500px) and (max-width: 599px){
+            width: 420px !important;
+        }
+    }
+
     .movie-card {
         width: 200px !important;
         height: 280px !important;
         margin: 0px 0px 24px 24px !important;
+        border-radius: 12px !important;
+    }
+
+    .movie-card-md {
+        width: 180px !important;
+        height: 260px !important;
+        margin: 0px 0px 24px 24px !important;
+        border-radius: 12px !important;
+    }
+
+    .movie-card-sm {
+        width: 140px !important;
+        height: 200px !important;
+        margin: 0px 0px 24px 24px !important;
+        border-radius: 12px !important;
+    }
+
+    .movie-card-xs {
+        width: 80px !important;
+        height: 130px !important;
+        margin: 0px 0px 12px 12px !important;
         border-radius: 12px !important;
     }
 
