--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@ span, p, h1, h2, h3, h4, h5 {
     color: white !important;
 }
 
+h3, h2 {
+    font-weight: 400 !important;
+}
+
 //WIDTH
 .w-100 {
     width: 100% !important;
@@ -57,6 +61,10 @@ span, p, h1, h2, h3, h4, h5 {
 
 .h-300p {
     height: 300px !important;
+}
+
+.h-65p {
+    height: 65px !important;
 }
 
 .h-50p {
